--- a/landing_page/landing.css
+++ b/landing_page/landing.css
@@ -42,7 +42,7 @@ body{
 .logo img{
   height: 1.5rem;
   width: 1.5rem;
-  border: none;
+  border: 2px solid #1a1a1a ;
   border-radius: 50px;
 }
 
